# ble-sensor-readings

./: .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf
src/: main.c
src/app_ble/: ble_manager.c  ble_manager.h
src/sensors/: gy_521.c  gy_521.h
src/sensors/BME280/: bme_280.c  bme_280.h  bme_280_config.h
src/sensors/sensor_io/: sensor_io.c  sensor_io.h
